--- a/package.json
+++ b/package.json
@@ -18,36 +18,56 @@
     }
   },
   "dependencies": {
-    "next": "^13.2.1",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.1",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^6.0.6",
+    "@mantine/hooks": "^6.0.6",
+    "@mantine/next": "^6.0.6",
+    "canvas": "^2.11.2",
+    "jszip": "^3.10.1",
+    "konva": "^8.4.3",
+    "next": "^13.3.0",
+    "papaparse": "^5.4.1",
+    "pixi.js": "^7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tabler-icons-react": "^1.56.0"
+    "react-icons": "^4.8.0",
+    "react-konva": "^18.2.5",
+    "react-player": "^2.12.0",
+    "remeda": "^1.12.0",
+    "use-image": "^1.1.0",
+    "uuid": "^9.0.0",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.28",
+    "@types/node": "^18.15.11",
+    "@types/papaparse": "^5.3.7",
+    "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.32.0",
-    "eslint-config-next": "^13.2.1",
-    "eslint-config-prettier": "^8.6.0",
+    "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.38.0",
+    "eslint-config-next": "^13.3.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-import-access": "^1.0.1",
+    "eslint-plugin-import-access": "^1.0.2",
     "eslint-plugin-simple-import-sort": "^9.0.0",
-    "eslint-plugin-sort-destructure-keys": "^1.4.0",
+    "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "eslint-plugin-sort-keys-custom-order": "^1.0.5",
-    "eslint-plugin-tailwindcss": "^3.8.2",
+    "eslint-plugin-tailwindcss": "^3.11.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.1.0",
+    "lint-staged": "^13.2.1",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4"
+    "prettier": "^2.8.7",
+    "tailwindcss": "^3.3.1",
+    "typescript": "^4.9.5"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
