--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "jszip": "^3.10.1",
     "konva": "^8.4.3",
     "next": "^13.3.0",
+    "opencv.js": "^1.2.1",
     "papaparse": "^5.4.1",
     "pixi.js": "^7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-konva": "^18.2.5",
+    "react-resizable-panels": "^0.0.44",
     "remeda": "^1.12.0",
     "uuid": "^9.0.0",
     "zustand": "^4.3.8"
