--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "@mantine/hooks": "^6.0.6",
     "@mantine/next": "^6.0.6",
     "@pixi/react": "^7.0.3",
+    "@techstark/opencv-js": "^4.7.0-release.1",
     "canvas": "^2.11.2",
     "chroma-js": "^2.4.2",
     "jszip": "^3.10.1",
     "konva": "^8.4.3",
     "next": "^13.3.0",
-    "opencv.js": "^1.2.1",
     "papaparse": "^5.4.1",
     "pixi.js": "^7.2.4",
     "react": "^18.2.0",
